<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="settingPermission"
            android:text="@string/btn_setting_permission"
            tools:layout_editor_absoluteX="177dp"
            tools:layout_editor_absoluteY="356dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:onClick="permissionBattery"
            android:text="@string/btn_setting_battery"
            tools:layout_editor_absoluteX="377dp"
            tools:layout_editor_absoluteY="356dp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:onClick="checkAutoStartPermission"
            android:text="@string/btn_setting_autorestart"
            tools:layout_editor_absoluteX="377dp"
            tools:layout_editor_absoluteY="356dp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:onClick="notifyOnLockScreenPermission"
            android:text="@string/btn_notify_on_lock_screen"
            tools:layout_editor_absoluteX="377dp"
            tools:layout_editor_absoluteY="356dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>